--- a/invoice.html
+++ b/invoice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invoice PDF</title>
+    <title>Invoice PDF for order invoice</title>
     <style>
         #invoice {
             padding: 30px;
