--- a/bootstrap-ecomm/main/thanks.html
+++ b/bootstrap-ecomm/main/thanks.html
@@ -257,88 +257,12 @@
                 </aside>
                 <!-- col.// -->
                 <main class="col-sm-9">
-                    <div id="code_prod_simple">
-                        <div class="row">
-                            <nav aria-label="breadcrumb">
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="#">Library</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Data</li>
-                                </ol>
-                            </nav>
-                            <div class="card mt-2">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <tr>
-                                            <th>Product</th>
-                                            <th>Description</th>
-                                            <th>Quantity/Update</th>
-                                            <th>Price</th>
-                                            <th>Discount</th>
-                                            <th>Tax</th>
-                                            <th>Total</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td> <img width="60" src="images/items/1.jpg" alt=""></td>
-                                            <td>Casual T-Shirt<br>Color : Black</td>
-                                            <td>
-                                                <div class="form-group col-md flex-grow-0">
-                                                    <div class="input-group input-spinner">
-                                                        <div class="input-group-prepend">
-                                                            <button class="btn btn-light" type="button"
-                                                                id="button-plus"> + </button>
-                                                        </div>
-                                                        <input type="text" class="form-control" value="1">
-                                                        <div class="input-group-append">
-                                                            <button class="btn btn-light" type="button"
-                                                                id="button-minus"> − </button>
-                                                        </div>
-                                                        <a href="" class="btn btn-outline-danger"> × Remove</a>
-                                                    </div> <!-- input-spinner.// -->
-                                                </div>
-                                            </td>
-                                            <td>Rs.1000.00</td>
-                                            <td>Rs.0.00</td>
-                                            <td>Rs.0.00</td>
-                                            <td>Rs.1000.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td colspan="6" style="text-align:right">Total Price: </td>
-                                            <td> Rs.3000.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td colspan="6" style="text-align:right">Total Discount: </td>
-                                            <td> Rs.0.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td colspan="6" style="text-align:right">Total Tax: </td>
-                                            <td> Rs.0.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td colspan="6" style="text-align:right"><strong>TOTAL (Rs.3000 - Rs.0 +
-                                                    Rs.0) =</strong></td>
-                                            <td class="label label-important" style="display:block"> <strong> Rs.3000.00
-                                                </strong></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <div class="col-md-4">
-                                    <form>
-                                        <div class="input-group mb-2">
-                                            <input type="text" class="form-control" placeholder="Coupon" name="">
-                                            <span class="input-group-append"><button
-                                                    class="btn btn-primary">Apply</button></span>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                            <a href="#" class="btn btn-warning btn-block mt-2">Continue Shopping</a>
-                            <a href="checkout.html" class="btn btn-block btn-success">Next</a>
-                        </div>
-                        <!-- row.// -->
-                    </div>
+									<header class="section-heading">
+										<h2>Thanks</h2>
+									</header><!-- sect-heading -->
+									<article>
+									<p>Order summary thanks page<br>
+									</article>
                 </main>
                 <!-- col.// -->
             </div>
